2006-07-24  Rodney Dawes  <dobey@novell.com>

	* */stock/generic/Makefile.am:
	* */stock/generic/stock_close.png:
	Removed the stock_close icon that is obsoleted by window-close

	Fixes #348509

2006-07-24  Rodney Dawes  <dobey@novell.com>

	* */stock/io/Makefile.am:
	* */stock/io/stock_open.png:
	Removed the stock_open icon that is obsoleted by folder-open

	Fixes #348401

2006-07-24  Jakub Steiner <jimmac@ximian.com>

	* tab-new, window-new, folder-new: updated the 'new' emblem

2006-07-24  Jakub Steiner <jimmac@ximian.com>

	* document-new*: fixes bug #348433. Includes a more visible emblem
		for new-*
	
2006-07-23  Rodney Dawes  <dobey@novell.com>

	* */apps/Makefile.am:
	* */apps/utilities-terminal.*:
	Add new terminal icon from Andreas Nilsson

	* 32x32/apps/preferences-desktop-screensaver.*:
	* 32x32/apps/system-file-manager.*:
	Add 32x32 versions of these from Andreas Nilsson

	* 48x48/apps/Makefile.am:
	* 48x48/apps/gnome-terminal.*:
	Remove the old terminal icon

2006-07-23  Rodney Dawes  <dobey@novell.com>

	* 22x22/apps/preferences-desktop-screensaver.*:
	* 24x24/apps/preferences-desktop-screensaver.*:
	Remove the background from this image

	* scalable/devices/Makefile.am: Add missing computer.svg

2006-07-21  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Add 32x32/actions/Makefile to AC_OUTPUT

	* */actions/Makefile.am:
	* */action/system-run.*:
	Add this new icon from Lapo Calamendrei

	* */apps/Makefile.am:
	* */apps/gnome-run.*:
	Remove this old run icon which is replaced by system-run above

2006-07-21  Rodney Dawes  <dobey@novell.com>

	* */apps/Makefile.am:
	* */apps/preferences-desktop-screensaver.*:
	* */apps/system-file-manager.*:
	Add icons from Andreas Nilsson

	* 48x48/apps/Makefile.am: Remove old file manager and screensaver icons

	* 32x32/apps/Makefile.am: Install the png not the svg, for 32x32

2006-07-17  Jakub Steiner <jimmac@ximian.com>

	* applications-accessories*:
	* applications-multimedia*: