@@ -57,7 +57,9 @@ icons_DATA =				\
 	media-skip-forward.png		\
 	process-stop.png		\
 	system-run.png			\
+	view-fullscreen.png		\
 	view-refresh.png 		\
+	view-restore.png		\
 	window-close.png		\
 	window-new.png			\
 	zoom-in.png			\
