@@ -41,7 +41,6 @@ icon_DATA =\
    stock_folder-move.png \
    stock_folder-properties.png \
    stock_format-page.png \
-   stock_fullscreen.png \
    stock_help-add-bookmark.png \
    stock_help-agent.png \
    stock_help-book-open.png \
@@ -53,7 +52,6 @@ icon_DATA =\
    stock_id.png \
    stock_keyring.png \
    stock_landline-phone.png \
-   stock_leave-fullscreen.png \
    stock_mark.png \
    stock_news.png \
    stock_new-24h-appointment.png \
