@@ -59,7 +59,9 @@ icons_DATA =				\
 	system-run.png			\
 	system-lock-screen.png		\
 	tab-new.png			\
+	view-fullscreen.png		\
 	view-refresh.png 		\
+	view-restore.png		\
 	window-close.png		\
 	window-new.png			\
 	zoom-in.png			\
