@@ -42,13 +42,11 @@ icon_DATA =\
 	stock_folder-move.png 		\
 	stock_folder-properties.png \
 	stock_format-page.png 		\
-	stock_fullscreen.png 		\
 	stock_help-agent.png 		\
 	stock_help-chat.png 		\
 	stock_id.png 			\
 	stock_keyring.png \
 	stock_landline-phone.png 	\
-  stock_leave-fullscreen.png \
 	stock_mark.png \
 	stock_news.png 			\
 	stock_new-24h-appointment.png 	\
